# OceanData

./: AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
01_Planung & Strategie/Konzepte & Visionen/: Whitepaper.md
01_Strategie_Planung/Konzepte & Visionen/: Whitepaper.md
02_Finanzen/: Businessplan.md  Finanzplan.md
docs/: ARCHITEKTUR.md  AUTH_API.md  FLOW_INTEGRATION.md  OCEANDATA-PLATTFORM-KOMPATIBILITÄT.md  SDK_REFERENCE.md  SECURITY_MOCKING.md
docs/Wiki/Finanzierung/: Budget&Ressourcen.md  Budgetplanung&Meilensteinen.md
docs/docs/OceanData/: Anforderungsanalyse.md  Architekturübersicht.md  Datenerfassung.md  Datenflussdiagramm.md  Entwickler-Prompt_de.md  Entwickler-Prompt_en.md  Entwicklungsplan.md  Klassendiagramm.md  Konzept-Datenschutz.md  Monetarisierung.md  Open-Source-Tools.md  Projektbeschreibung.md  Projektspezifikation.md  Technologie-Stack.md  modularerAlgorithmus.md
docs/docs/OceanData/Monetarisierung/: Einnahmenanalyse-ESN.md  Erweiterte-Analyse.md  Langzeitanalyse.md  Monetarisierungspotenzial-Erweiterte-Datenquellen.md  Monetarisierungspotenzial.md
docs/docs/OceanData/Monetarisierung/pics/: Technische-Übersicht.md  prompt-2.md  prompt-3.md  prompt-4.md  prompt.md  Ökosystem.md
examples/: demo_script.sh  quickstart.ipynb
ocean_sdk/: __init__.py  analytics.py  blockchain.py  c2d.py  data_sources.py  identity.py  marketplace.py  models.py
scripts/: project-strukture.sh
src/: __init__.py  api.py  auth.py  main.py
src/interop/: datalatte_adapter.py  dataunion_service.py  ocean_client.py  streamr_connector.py
src/modules/: calculator.py
src/oceandata/: README.md  requirements.txt
src/oceandata/src/: Integration-OceanData-Kernmodule.py  app.py  config.py  demo.py
src/oceandata/src/analytics/: Anomaliedetektor.py  Datenerfassungs&Analysealgorithmus.py  ocean_data_ai.py
src/oceandata/src/analytics/models/: anomaly_detector.py  data_synthesizer.py  predictive_modeler.py  semantic_analyzer.py
src/oceandata/src/analytics/ocandata-ai/: Project.md  ProjektStruktur.md  __init__.py  config.py  pyproject.toml
src/oceandata/src/analytics/ocandata-ai/models/anomaly/: detector.py
src/oceandata/src/analytics/preprocessing/: ComputeToDataManager.py
src/oceandata/src/blockchain/: tokenization.py
src/oceandata/src/core/: ocandata_ai.py
src/oceandata/src/core/ocandata-ai/: README.md
src/oceandata/src/core/ocandata-ai/core/: logging.py
src/oceandata/src/data-integration/: Datenintegrationsmodul.py  base.py  base2.py
src/oceandata/src/data-integration/connectors/: browser_connector.py  calendar_connector.py  smartwatch-connector.py  socialmedia_connector.py
src/oceandata/src/frontend/: README.md  build_and_run.sh  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/oceandata/src/frontend/src/: App.tsx  index.css  server.py
src/oceandata/src/frontend/src/components/icons/: index.tsx
src/oceandata/src/frontend/src/components/layout/: Layout.tsx  Navbar.tsx  Sidebar.tsx
src/oceandata/src/frontend/src/context/: AuthContext.tsx  DataContext.tsx
src/oceandata/src/frontend/src/pages/: Analytics.tsx  Dashboard.tsx  DataSources.tsx  LoginPage.tsx  Marketplace.tsx  NotFound.tsx  Settings.tsx  Tokenization.tsx
src/oceandata/src/frontend/src/utils/: api.ts
src/oceandata/src/marketplace/frontend/components/: DataTokenizationDashboard.jsx
src/oceandata/src/marketplace/frontend/pages/: Marketplace.jsx
src/oceandata/src/privacy/: compute_to_data.py
src/oceandata/tests/: conftest.py  run_tests.py  test_oceandata.py
src/oceandata/tests/components/: DataTokenizationDashboard.test.js
tests/: test_main.py
tests/unit/interop/: test_datalatte_adapter.py  test_dataunion_service.py  test_ocean_client.py  test_streamr_connector.py
ts-sdk/: bin.ts  package-lock.json  package.json
ts-sdk/src/: core.ts  index.ts
